--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,11 @@ header {
     border: 4px solid black;
 }
 
+header span:hover {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
 main {
     height:50vw;
     display: flex;
